[project]
name = "ctfreg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pytz==2025.1",
    "requests==2.32.3",
    "thefuzz==0.22.1",
    "red-discordbot>=3.0.2", # Do not include this in info.json, as it is a dependency of the bot, not the cog
]
